fixed code snippet shadows for dark mode

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,6 +5,6 @@
 }
 
 .hextra-code-block {
-  box-shadow: 1px 1px 2px lightgray;
+  box-shadow: 1px 1px 2px #22222222, 1px 5px 5px #22222211;
   border-radius: 12px;
 }
